# pysim

./: .checkpatch.conf  .gitignore  .gitreview  README  README.md  bsp_python_bindings.cpp  bsp_test_integration.py  ccc-fix.py  ccc-gen.py  ccc-prog.py  ccc.py  csv-format  execute_ipr.py  fairwaves_db_randomize.py  fairwaves_db_to_hlr.py  fairwaves_db_uniq.py  format_ipr.py  format_ldr.py  ldr_to_ipr.py  lint_pylint.sh  lint_ruff.sh  osmo-ras.py  osmo-smdpp.py  ota_test.py  pySim-fairwaves-prog.py  pySim-prog.py  pySim-read-all.py  pySim-read.py  pySim-run-gsm.py  pySim-shell.py  pySim-smpp2sim.py  pySim-trace.py  pySim.py  pyproject.toml  requirements.txt  ruff.toml  saip-test.py  script_format.py  setup.py  smpp2sim.py  (+4 more)
contrib/: analyze_simaResponse.py  card2server.py  card_server.py  csv-encrypt-columns.py  csv-to-pgsql.py  eidtool.py  es2p_client.py  es2p_server.py  es9p_client.py  esim-qrcode-gen.py  esim_gen_metadata.py  fsdump-diff-apply.py  fsdump2saip.py  generate_self_signed_operator_cert.py  generate_smdpp_certs.py  jenkins.sh  saip-tool.py  saip-tool_example_add-app.sh  saip-tool_example_extract-apps.sh  saip-tool_example_remove-app-inst.sh  saip-tool_example_remove-app.sh  sim-rest-client.py  sim-rest-server.py  sim-rest-server.service  smpp-ota-tool.py  suci-keytool.py  unber.py  wsrc_card_client.py  wsrc_server.py
docs/: Makefile  cap-tutorial.rst  card-key-provider.rst  conf.py  index.rst  legacy.rst  library-esim.rst  library.rst  osmo-smdpp.rst  put_key-tutorial.rst  pysim_fs_sphinx.py  rcpf.rst  remote-access.rst  saip-tool.rst  shell.rst  trace.rst  (+6 more)
(+441 files in other folders)
